<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.numbers.TakeAllNumbers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/chosen_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@color/gray"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/chosen_elements" />

        <TextView
            android:id="@+id/tv_nth_element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/nth_element" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_enter_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/n"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_take_number"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="60sp"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:inputType="numberSigned"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:icon="@drawable/baseline_add_24"
            android:text="@string/add"
            android:textAlignment="gravity"/>


        <Button
            android:id="@+id/btn_create_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/create" />

    </LinearLayout>

</ScrollView>